// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonDropdown should render shallow component ok 1`] = `
.emotion-1 {
  margin-left: 8px;
  margin-right: -8px;
}

<button
  className="ui-btn ui-btn--medium ui-btn--tertiary emotion-0 emotion-5"
  data-test="ui-button"
  disabled={false}
  name={undefined}
  onClick={[Function]}
  role="button"
  style={Object {}}
  type={undefined}
>
  <div
    className="ui-btn__react-placeholder-message"
  >
    <i
      className="ui-icon ui-icon--size-20 fill-currentColor emotion-0 emotion-1"
      onClick={undefined}
      style={Object {}}
      title={undefined}
    >
      <svg
        aria-hidden="true"
        height={20}
        width={20}
      >
        <use
          xlinkHref="#keyboard_arrow_down"
        />
      </svg>
    </i>
  </div>
  <div
    className="ui-btn__react-visible-message"
    name="message"
    title={undefined}
  >
    <i
      className="ui-icon ui-icon--size-20 fill-currentColor emotion-0 emotion-1"
      onClick={undefined}
      style={Object {}}
      title={undefined}
    >
      <svg
        aria-hidden="true"
        height={20}
        width={20}
      >
        <use
          xlinkHref="#keyboard_arrow_down"
        />
      </svg>
    </i>
    <div
      className="root"
    >
      <div
        style={
          Object {
            "display": "none",
          }
        }
      />
    </div>
  </div>
  <div
    className="ui-btn__react-success-message"
  />
</button>
`;

exports[`ButtonDropdown should render with a checkbox 1`] = `
.emotion-3 {
  margin-left: 8px;
  margin-right: -8px;
}

.emotion-1 {
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: start;
  align-content: flex-start;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<button
  className="ui-btn ui-btn--medium ui-btn--tertiary emotion-2 emotion-9"
  data-test="ui-button"
  disabled={false}
  name={undefined}
  onClick={[Function]}
  role="button"
  style={Object {}}
  type={undefined}
>
  <div
    className="ui-btn__react-placeholder-message"
  >
    <div
      className="ui-checkbox ui-checkbox--large emotion-0 emotion-1"
      data-test="ui-checkbox"
      name={undefined}
      style={Object {}}
    >
      <input
        checked={false}
        disabled={false}
        id="checkbox1"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        htmlFor="checkbox1"
        onClick={[Function]}
      />
    </div>
    <i
      className="ui-icon ui-icon--size-20 fill-currentColor emotion-2 emotion-3"
      onClick={undefined}
      style={Object {}}
      title={undefined}
    >
      <svg
        aria-hidden="true"
        height={20}
        width={20}
      >
        <use
          xlinkHref="#keyboard_arrow_down"
        />
      </svg>
    </i>
  </div>
  <div
    className="ui-btn__react-visible-message"
    name="message"
    title={undefined}
  >
    <div
      className="ui-checkbox ui-checkbox--large emotion-0 emotion-1"
      data-test="ui-checkbox"
      name={undefined}
      style={Object {}}
    >
      <input
        checked={false}
        disabled={false}
        id="checkbox2"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        htmlFor="checkbox2"
        onClick={[Function]}
      />
    </div>
    <i
      className="ui-icon ui-icon--size-20 fill-currentColor emotion-2 emotion-3"
      onClick={undefined}
      style={Object {}}
      title={undefined}
    >
      <svg
        aria-hidden="true"
        height={20}
        width={20}
      >
        <use
          xlinkHref="#keyboard_arrow_down"
        />
      </svg>
    </i>
    <div
      className="root"
    >
      <div
        style={
          Object {
            "display": "none",
          }
        }
      />
    </div>
  </div>
  <div
    className="ui-btn__react-success-message"
  />
</button>
`;
